--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
 <body>
     <div id="root"></div>
+    <div id="js"></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script>
-        const heading = React.createElement("h1",{},"Hello world with React");
+        const jsheading = document.createElement("h1");
+        jsheading.innerHTML = "Hello world with js";
+        document.getElementById("js").appendChild(jsheading);
+
+
+        const heading = React.createElement("h1", {}, "Hello world with React");
         const root = ReactDOM.createRoot(document.getElementById("root"));
         root.render(heading);
     </script>
