--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste React</title>
+    <link rel="stylesheet" href="./index.css"/>
 </head>
 
 <body>
@@ -12,15 +13,8 @@
     <div id="js"></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script>
-        const jsheading = document.createElement("h1");
-        jsheading.innerHTML = "Hello world with js";
-        document.getElementById("js").appendChild(jsheading);
-
-
-        const heading = React.createElement("h1", {}, "Hello world with React");
-        const root = ReactDOM.createRoot(document.getElementById("root"));
-        root.render(heading);
+    <script src="./App.js">
+    
     </script>
 </body>
 
