--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Namaste React</title>
-    <link rel="stylesheet" href="./index.css"/>
-</head>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
-    <div id="js"></div>
-    <script type="module" src="./App.js">
-    
-    </script>
-</body>
-
+    <script type="module" src="./App.js" />
+  </body>
 </html>
